# RecipeHQ-Kitchen-Operating-System

./: .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test_temp.db
app/: main.py
app/api/: deps.py
app/api/endpoints/: auth.py  projects.py  recipes.py
app/core/: config.py  s3.py  security.py
app/db/: models.py  session.py
app/schemas/: auth.py  document.py  project.py  recipe.py
frontend/: next.config.ts  package-lock.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(kitchen)/: layout.tsx
frontend/src/app/(kitchen)/dashboard/: page.tsx
frontend/src/app/(kitchen)/dashboard/[id]/: page.tsx
frontend/src/app/(kitchen)/dashboard/[id]/list/: page.tsx
frontend/src/app/(kitchen)/recipes/: page.tsx
frontend/src/app/(kitchen)/recipes/[id]/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/dashboard/[id]/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/public-menu/[id]/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: AddProjectModal.tsx  AddRecipeModal.tsx  AddRecipeToProjectModal.tsx  BrigadeReportModal.tsx  DocumentManager.tsx  InviteMember.tsx  Navbar.tsx  ProjectCard.tsx  RecipeImage.tsx
frontend/src/types/: auth.ts  project.ts
localstack_data/cache/: machine.json
localstack_data/s3/: store.json
localstack_data/s3/assets/recipe-photos/: new_25e5106207b1492aa69b32d13eaa2aeb.jpg@null  new_67ccb2e460824548a7dd8a681733d8f0.jpg@null  new_aa79ccd8ba83422a8fc691f5b1ce034d.jpg@null
localstack_init/: init-s3.sh
migrations/: env.py
migrations/versions/: 5dd3897728ab_initial_migration.py  71100c32b3c6_add_roles_to_participants.py  86e028a514e8_initial_fresh_schema.py  96f718145ef6_full_schema_v1.py
tests/: conftest.py  test_auth.py  test_recipe_schemas.py
(+1 files in other folders)
